Bug 1498115 - Part 2: Add badges to show the flex-direction and flex-wrap properties of the flex container. r=pbro
We move the .markup-badge styles from markup.css to inspector.css instead of common.css
for a smaller import size in the markup.xhtml.

UltraBlame original commit: bbcd0df864115f756c6c8da8e60dcefe1f134ad7

--- a/devtools/client/themes/layout.css
+++ b/devtools/client/themes/layout.css
@@ -390,100 +390,6 @@ direction
 column
 ;
 }
-#
-layout
--
-flexbox
--
-container
-.
-flex
--
-header
--
-content
-:
-not
-(
-.
-flex
--
-item
--
-shown
-)
-{
-overflow
-:
-hidden
-;
-display
-:
-flex
-;
-}
-#
-layout
--
-flexbox
--
-container
-.
-flex
--
-header
--
-content
-:
-not
-(
-.
-flex
--
-item
--
-shown
-)
-.
-objectBox
-{
-max
--
-width
-:
-calc
-(
-100
-%
--
-20px
-)
-;
-margin
--
-inline
--
-end
-:
-5px
-;
-text
--
-overflow
-:
-ellipsis
-;
-overflow
-:
-hidden
-;
-white
--
-space
-:
-nowrap
-;
-}
 .
 flex
 -
@@ -499,13 +405,8 @@ items
 :
 center
 ;
-height
-:
-32px
-;
 padding
 :
-0
 3px
 ;
 border
@@ -579,15 +480,18 @@ header
 -
 content
 {
+display
+:
+flex
+;
 flex
 :
 1
 ;
 padding
--
-top
 :
 2px
+0
 ;
 padding
 -
@@ -613,6 +517,90 @@ flex
 header
 -
 content
+:
+not
+(
+.
+flex
+-
+item
+-
+shown
+)
+{
+flex
+-
+direction
+:
+column
+;
+overflow
+:
+hidden
+;
+}
+.
+flex
+-
+header
+-
+content
+:
+not
+(
+.
+flex
+-
+item
+-
+shown
+)
+.
+objectBox
+{
+max
+-
+width
+:
+calc
+(
+100
+%
+-
+20px
+)
+;
+margin
+-
+inline
+-
+end
+:
+5px
+;
+text
+-
+overflow
+:
+ellipsis
+;
+overflow
+:
+hidden
+;
+white
+-
+space
+:
+nowrap
+;
+}
+.
+flex
+-
+header
+-
+content
 .
 flex
 -
@@ -620,10 +608,6 @@ item
 -
 shown
 {
-display
-:
-flex
-;
 justify
 -
 content
@@ -632,6 +616,69 @@ center
 ;
 padding
 :
+0
+;
+}
+.
+flex
+-
+header
+-
+container
+-
+properties
+{
+display
+:
+flex
+;
+}
+.
+flex
+-
+header
+-
+container
+-
+properties
+.
+inspector
+-
+badge
+:
+first
+-
+child
+{
+margin
+-
+inline
+-
+start
+:
+0
+;
+}
+.
+flex
+-
+header
+-
+container
+-
+label
+.
+flex
+-
+header
+-
+container
+-
+properties
+{
+padding
+:
+3px
 0
 ;
 }
