--- a/devtools/client/themes/markup.css
+++ b/devtools/client/themes/markup.css
@@ -5,139 +5,6 @@ root
 -
 markup
 -
-badge
--
-active
--
-background
--
-color
-:
-var
-(
--
--
-blue
--
-50
-)
-;
--
--
-markup
--
-badge
--
-active
--
-border
--
-color
-:
-#
-FFFFFFB3
-;
--
--
-markup
--
-badge
--
-background
--
-color
-:
-white
-;
--
--
-markup
--
-badge
--
-border
--
-color
-:
-#
-CACAD1
-;
--
--
-markup
--
-badge
--
-color
-:
-var
-(
--
--
-grey
--
-60
-)
-;
--
--
-markup
--
-badge
--
-hover
--
-background
--
-color
-:
-#
-DFDFE8
-;
--
--
-markup
--
-badge
--
-interactive
--
-background
--
-color
-:
-var
-(
--
--
-grey
--
-20
-)
-;
--
--
-markup
--
-badge
--
-interactive
--
-color
-:
-var
-(
--
--
-grey
--
-90
-)
-;
--
--
-markup
--
 hidden
 -
 attr
@@ -215,158 +82,6 @@ dark
 :
 root
 {
--
--
-markup
--
-badge
--
-active
--
-background
--
-color
-:
-var
-(
--
--
-blue
--
-60
-)
-;
--
--
-markup
--
-badge
--
-active
--
-border
--
-color
-:
-#
-FFF6
-;
--
--
-markup
--
-badge
--
-background
--
-color
-:
-var
-(
--
--
-grey
--
-80
-)
-;
--
--
-markup
--
-badge
--
-border
--
-color
-:
-var
-(
--
--
-grey
--
-50
-)
-;
--
--
-markup
--
-badge
--
-color
-:
-var
-(
--
--
-grey
--
-40
-)
-;
--
--
-markup
--
-badge
--
-hover
--
-background
--
-color
-:
-var
-(
--
--
-grey
--
-80
-)
-;
--
--
-markup
--
-badge
--
-interactive
--
-background
--
-color
-:
-var
-(
--
--
-grey
--
-70
-)
-;
--
--
-markup
--
-badge
--
-interactive
--
-color
-:
-var
-(
--
--
-grey
--
-30
-)
-;
 -
 -
 markup
@@ -1339,8 +1054,6 @@ var
 (
 -
 -
-markup
--
 badge
 -
 interactive
@@ -1393,8 +1106,6 @@ var
 (
 -
 -
-markup
--
 badge
 -
 border
@@ -1408,8 +1119,6 @@ var
 (
 -
 -
-markup
--
 badge
 -
 color
@@ -1420,8 +1129,6 @@ fill
 var
 (
 -
--
-markup
 -
 badge
 -
@@ -1462,6 +1169,55 @@ context
 properties
 :
 fill
+;
+}
+.
+expandable
+.
+collapsed
+.
+markup
+-
+expand
+-
+badge
+:
+focus
+:
+:
+before
+.
+expandable
+.
+collapsed
+.
+markup
+-
+expand
+-
+badge
+:
+hover
+:
+:
+before
+{
+background
+-
+color
+:
+var
+(
+-
+-
+badge
+-
+hover
+-
+background
+-
+color
+)
 ;
 }
 .
@@ -2151,604 +1907,5 @@ font
 style
 :
 italic
-;
-}
-.
-markup
--
-badge
-{
-display
-:
-inline
--
-block
-;
-font
--
-size
-:
-10px
-;
-font
--
-weight
-:
-normal
-;
-line
--
-height
-:
-10px
-;
-height
-:
-10px
-;
-margin
--
-top
-:
-1px
-;
-vertical
--
-align
-:
-top
-;
-border
-:
-1px
-solid
-var
-(
--
--
-markup
--
-badge
--
-border
--
-color
-)
-;
-border
--
-radius
-:
-3px
-;
-padding
-:
-0px
-2px
-;
-margin
--
-inline
--
-start
-:
-5px
-;
--
-moz
--
-user
--
-select
-:
-none
-;
-background
--
-color
-:
-var
-(
--
--
-markup
--
-badge
--
-background
--
-color
-)
-;
-color
-:
-var
-(
--
--
-markup
--
-badge
--
-color
-)
-;
-}
-media
-(
-min
--
-resolution
-:
-1
-.
-1dppx
-)
-{
-.
-markup
--
-badge
-{
-font
--
-size
-:
-9px
-;
-}
-}
-.
-markup
--
-badge
-[
-data
--
-custom
-]
-.
-markup
--
-badge
-[
-data
--
-display
-=
-"
-flex
-"
-]
-.
-interactive
-.
-markup
--
-badge
-[
-data
--
-display
-=
-"
-grid
-"
-]
-.
-interactive
-.
-markup
--
-badge
-[
-data
--
-display
-=
-"
-inline
--
-flex
-"
-]
-.
-interactive
-.
-markup
--
-badge
-[
-data
--
-display
-=
-"
-inline
--
-grid
-"
-]
-.
-interactive
-.
-markup
--
-badge
-[
-data
--
-event
-]
-{
-background
--
-color
-:
-var
-(
--
--
-markup
--
-badge
--
-interactive
--
-background
--
-color
-)
-;
-color
-:
-var
-(
--
--
-markup
--
-badge
--
-interactive
--
-color
-)
-;
-cursor
-:
-pointer
-;
-}
-.
-markup
--
-badge
-[
-data
--
-display
-=
-"
-flex
-"
-]
-:
-not
-(
-.
-active
-)
-.
-interactive
-:
-focus
-.
-markup
--
-badge
-[
-data
--
-display
-=
-"
-flex
-"
-]
-:
-not
-(
-.
-active
-)
-.
-interactive
-:
-hover
-.
-markup
--
-badge
-[
-data
--
-display
-=
-"
-grid
-"
-]
-:
-not
-(
-.
-active
-)
-.
-interactive
-:
-focus
-.
-markup
--
-badge
-[
-data
--
-display
-=
-"
-grid
-"
-]
-:
-not
-(
-.
-active
-)
-.
-interactive
-:
-hover
-.
-markup
--
-badge
-[
-data
--
-display
-=
-"
-inline
--
-flex
-"
-]
-:
-not
-(
-.
-active
-)
-.
-interactive
-:
-focus
-.
-markup
--
-badge
-[
-data
--
-display
-=
-"
-inline
--
-flex
-"
-]
-:
-not
-(
-.
-active
-)
-.
-interactive
-:
-hover
-.
-markup
--
-badge
-[
-data
--
-display
-=
-"
-inline
--
-grid
-"
-]
-:
-not
-(
-.
-active
-)
-.
-interactive
-:
-focus
-.
-markup
--
-badge
-[
-data
--
-display
-=
-"
-inline
--
-grid
-"
-]
-:
-not
-(
-.
-active
-)
-.
-interactive
-:
-hover
-.
-markup
--
-badge
-[
-data
--
-event
-]
-:
-focus
-.
-markup
--
-badge
-[
-data
--
-event
-]
-:
-hover
-.
-expandable
-.
-collapsed
-.
-markup
--
-expand
--
-badge
-:
-focus
-:
-:
-before
-.
-expandable
-.
-collapsed
-.
-markup
--
-expand
--
-badge
-:
-hover
-:
-:
-before
-{
-background
--
-color
-:
-var
-(
--
--
-markup
--
-badge
--
-hover
--
-background
--
-color
-)
-;
-}
-.
-markup
--
-badge
-.
-active
-.
-markup
--
-badge
-.
-interactive
-.
-active
-{
-background
--
-color
-:
-var
-(
--
--
-markup
--
-badge
--
-active
--
-background
--
-color
-)
-;
-border
--
-color
-:
-var
-(
--
--
-markup
--
-badge
--
-active
--
-border
--
-color
-)
-;
-color
-:
-var
-(
--
--
-theme
--
-selection
--
-color
-)
 ;
 }
